Refactor world boundaries and pivot handling
- Updated Raycast.py to use total_size for world boundaries.
- Increased world_size in Scene.py to 3 and added PivotGizmo for rendering.
- Modified World.py to calculate total_size and manage a single large chunk.
- Enhanced FileManager.py to include pivot information in AABB calculations.
- Improved UIManager.py to handle pivot setting and edit modes more effectively.
- Added ActionHistory.py to manage undo/redo functionality for voxel actions.
- Introduced PivotGizmo.py for rendering a visual representation of the pivot.
- Created shaders for the PivotGizmo to enhance visual feedback.
- Adjusted Config.py for screen dimensions and shader file handling.

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][VlxTool]
-Pos=19,14
-Size=370,360
+Pos=12,10
+Size=236,911
+Collapsed=0
+
+[Window][File & History]
+Pos=1308,5
+Size=348,927
 Collapsed=0
 
